# timdex-dataset-api

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml
docs/: reading.md
migrations/: 001_2025_05_30_backfill_run_timestamp_column.py  002_2025_06_25_consistent_run_timestamp_per_etl_run.py  003_2025_07_03_fix_row_group_sizes.py  README.md
tests/: conftest.py  test_config.py  test_dataset.py  test_dataset_read.py  test_dataset_write.py  test_embeddings.py  test_install.py  test_metadata.py  test_read.py  test_records.py  test_runs.py  test_s3client.py  test_source.py  test_utils.py  test_write.py  utils.py
tests/fixtures/local_datasets/dataset/source=alma/run_date=2023-03-06/run_type=daily/action=index/run_id=74afc7ba-9bbe-4f52-827d-c0595fa82036/: records-0.parquet
tests/fixtures/local_datasets/dataset/source=alma/run_date=2023-03-07/run_type=daily/action=delete/run_id=b831b653-028d-42eb-bf9f-c9fcdd46a982/: records-0.parquet
tests/fixtures/local_datasets/dataset/source=libguides/run_date=2023-08-09/run_type=full/action=index/run_id=e90832e8-399f-476c-9b33-9ebe4120b5ab/: records-0.parquet
timdex_dataset_api/: __init__.py  config.py  dataset.py  embeddings.py  exceptions.py  metadata.py  record.py  run.py  source.py  utils.py
