[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timdex_dataset_api"
version = "4.1.0"
description = "Python library for interacting with a TIMDEX parquet dataset"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
    { name = "Graham Hukill", email = "ghukill@mit.edu" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "attrs",
    "boto3",
    "duckdb",
    "duckdb_engine",
    "pandas<3.0.0",
    "pyarrow",
    "sqlalchemy==2.0.44",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]",
    "coveralls>=4.0.1",
    "ipython>=8.0.0",
    "moto>=5.0.0",
    "mypy>=1.15.0",
    "pandas-stubs",
    "pip-audit>=2.9.0",
    "pre-commit>=4.0.0",
    "pyarrow-stubs",
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/", "migrations/"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"
filterwarnings = [
    "ignore:duckdb-engine doesn't yet support reflection on indices:duckdb_engine.DuckDBEngineWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "COM812",
    "D107",
    "EM101",
    "N812",
    "PTH",
    "C90",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D415",
    "D417",
    "EM102",
    "G004",
    "PLC0207",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S321",
    "S608",
    "TD002",
    "TD003",
    "TRY003",
]

fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"
